# qpicoscope

./: ProjectHome.md  README  README.md  autotroll.mk  configure.ac  configure.in
images/: icon50.png.old  icon50.xpm
lib/libps2000-2.0.7.7-1.i386/: libps2000-2.0.7.7-1.i386.rpm
lib/libps2000-2.0.7.7-1.x86_64/: PS2000con.c  libps2000_2.0.7.7-2_amd64.deb  usbtest
lib/libps2000alinux-1.0.1.i386/: ps2000alinux-1.0-2.i386.rpm
lib/libps2_3000-3.6.4.4-1.i386/: 95-pico.rules  INSTALL  README
lib/libps2_3000-3.6.4.4-1.x86_64/: libps2-3000_3.6.4.4-2_amd64.deb
src/: Makefile  Makefile.am  acquisition.cpp  acquisition.h  acquisition2000.cpp  acquisition2000.h  acquisition2000a.h  acquisition3000.cpp  acquisition3000.h  comborange.cpp  comborange.h  drawdata.h  frontpanel.cpp  frontpanel.h  main.cpp  mainwindow.cpp  oscilloscope.h  qpicoscope.pro  screen.cpp  search-for-acquisition-device-worker.h
tags/qpicoscope-0.1/: AUTHORS  Makefile.am
tags/qpicoscope-0.1/lib/libps2000-2.0.7.7-1.x86_64/: libps2000-2.0.7.7-1.x86_64.rpm
tags/qpicoscope-0.1/lib/libps2_3000-3.6.4.4-1.x86_64/: INSTALL  README  libps2_3000-3.6.4.4-1.x86_64.rpm
tags/qpicoscope-0.1/src/: acquisition.cpp  acquisition2000.cpp  acquisition2000.h  acquisition3000.cpp  acquisition3000.h  frontpanel.cpp  main.cpp  mainwindow.h  oscilloscope.h  qpicoscope.pro  screen.cpp  screen.h
trunk/: Makefile.am  README  autogen.sh  autotroll.m4  configure.in
trunk/images/: icon50.xpm
trunk/lib/libps2000-2.0.7.7-1.i386/: INSTALL  PicoScope.conf  libps2000_2.0.7.7-2_i386.deb
trunk/lib/libps2000-2.0.7.7-1.x86_64/: README
trunk/lib/libps2000alinux-1.0.1.i386/: INSTALL  PS2000Acon.c  README  linux_utils.h  ps2000alinux_1.0-1_i386.deb  usbtest
trunk/lib/libps2_3000-3.6.4.4-1.i386/: PS3000con.c  libps2-3000_3.6.4.4-2_i386.deb  libps2_3000-3.6.4.4-1.i386.rpm
trunk/src/: Makefile  Makefile.am  acquisition.cpp  acquisition.h  acquisition2000.cpp  acquisition2000.h  acquisition2000a.cpp  acquisition2000a.h  acquisition3000.cpp  acquisition3000.h  comborange.cpp  comborange.h  configure.in  frontpanel.cpp  frontpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  oscilloscope.h  qpicoscope.pro  screen.cpp  screen.h  search-for-acquisition-device-worker.cpp
wiki/: README.wiki
