AC_INIT([QPicoscope],[0.1],[vincent.hervieux@free.fr])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Check for programs
AC_PROG_CC
AC_PROG_CXX
AC_CHECK_PROGS([QMAKE], [qmake-qt4 qmake], [:])
if test "$QMAKE" = :; then
    AC_MSG_ERROR([This package needs qmake.])
fi

# Check for libraries -lm -lps2000 -lps3000 -lqwt-qt4 -lQtGui -lQtCore -lpthread 
AC_CHECK_LIB([ps2000], [ps2000_open_unit],,AC_MSG_ERROR([This package needs libps2000 from Picotech.]))
AC_CHECK_LIB([ps3000], [ps3000_open_unit],,AC_MSG_ERROR([This package needs libps3000 from Picotech.]))
AC_CHECK_LIB([pthread], [pthread_create],,AC_MSG_ERROR([This package needs POSIX libpthread.]))

# AutoTroll with Qt.
AT_WITH_QT

# Output files
AC_CONFIG_HEADERS(qpicoscope-config.h)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
